@@ -1,20 +1,23 @@
 package com.fiap.techchallenge.adapter.out.persistence.product;
 
+import com.fiap.techchallenge.application.domain.exception.ResourceNotFoundException;
 import com.fiap.techchallenge.application.domain.model.Product;
 import com.fiap.techchallenge.application.port.out.product.CreateProductPort;
+import com.fiap.techchallenge.application.port.out.product.DeleteProductPort;
 import com.fiap.techchallenge.application.port.out.product.SearchProductPort;
+import com.fiap.techchallenge.application.port.out.product.UpdateProductPort;
 import io.micrometer.common.util.StringUtils;
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Example;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Component;
 
+import java.util.List;
+
 @RequiredArgsConstructor
 @Component
 public class ProductPersistenceAdapter implements CreateProductPort,
-    SearchProductPort {
+    SearchProductPort, UpdateProductPort, DeleteProductPort {
 
     private final ProductJpaRepository springDataRepository;
 
@@ -41,7 +44,26 @@ public class ProductPersistenceAdapter implements CreateProductPort,
             Sort.by(Sort.Direction.DESC, "name"));
 
         return entities.stream()
-            .map(entityMapper::toDomainEntity)
-            .collect(Collectors.toList());
+            .map(entityMapper::toDomainEntity).toList();
+    }
+
+    @Override
+    public void deleteProduct(String entityId) {
+        springDataRepository.deleteById(entityId);
+    }
+
+    @Override
+    public Product updateProduct(String entityId, Product domainEntity)
+        throws ResourceNotFoundException {
+        var entity = springDataRepository.findById(entityId)
+            .orElseThrow(ResourceNotFoundException::new);
+
+        entity.setDescription(domainEntity.getDescription());
+        entity.setName(domainEntity.getName());
+        entity.setPrice(domainEntity.getPrice());
+
+        springDataRepository.save(entity);
+
+        return entityMapper.toDomainEntity(entity);
     }
 }
